[package]
authors = ["The RustWasm Developers"]
categories = ["wasm"]
description = "My super awesome Rust, WebAssembly, and Webpack project!"
license = "Apache-2.0/MIT"
name = "rust-webpack"
readme = "./README.md"
repository = "https://github.com/rustwasm/rust-webpack-template"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.25"
console_error_panic_hook = "0.1.5"
wee_alloc = "0.4.2"
squark = "0.7.0"
squark-macros = "0.7.0"
squark-web = "0.3.0"
serde_json = "1.0.33"
rss = "1.6.1"
wasm-bindgen-futures = "0.3.7"
futures = "0.1.25"
serde = "1.0.84"
atom_syndication = "0.6.0"
chrono = "0.4.6"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Document",
  "Element",
  "HtmlElement",
  "Node",
  "Window",
  "Headers",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
]
